# aria

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/extensions/: ai.generate.md  ai.md  docling.convert.md  docling.md  file.md  file.read.md  file.write.md  json.parse.md  text.chunk.md  utils.md
examples/: hello.yml  json_parse.yml  ollama_summarize.yml  summarize_document.yml  summarize_pdf.yml  summarize_text.yml
src/aic/: cli.py
src/aic/commands/: run.py  validate.py
src/aic/core/: context.py  errors.py  parser.py  runner.py  templates.py  validator.py
src/aic/extensions/: base.py  registry.py
src/aic/extensions/builtins/: ai_generate.py  docling.py  docling_convert.py  file.py  file_read.py  file_write.py  json_parse.py  text_chunk.py  utils.py
src/aic/providers/: ollama_provider.py  openai_provider.py
src/aic/types/: workflow.py
src/aria/: cli.py
src/aria/commands/: init.py  run.py  update.py  validate.py  version.py
src/aria/core/: context.py  errors.py  logger.py  parser.py  runner.py  templates.py  validator.py
src/aria/extensions/: base.py  registry.py
src/aria/extensions/builtins/: ai.py  docling.py  file.py  utils.py
src/aria/providers/: ollama_provider.py  openai_provider.py
tests/: test_ai_generate.py  test_cli_commands.py  test_docling_convert.py  test_runner_file_write.py  test_templates.py  test_validate.py
