[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aic"
version = "0.1.0"
description = "CLI runtime for AI workflows as code"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "jinja2",
  "openai",
  "pydantic",
  "pyyaml",
  "rich",
  "typer",
]

[project.optional-dependencies]
dev = ["pre-commit", "pytest", "ruff"]
docling = ["docling"]

[project.scripts]
aic = "aic.cli:app"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.uv]
package = true
