[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aria"
version = "0.1.0"
description = "Automation Runtime for Intelligent Actions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "jinja2",
  "openai",
  "pydantic",
  "pyyaml",
  "rich",
  "typer",
]

[project.optional-dependencies]
dev = ["pre-commit", "pytest", "ruff"]
docling = ["docling"]

[project.scripts]
aria = "aic.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/aic"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.uv]
package = true
